objects/SVOC_Request__c.object
<CustomObject>
    <fields>
        <fullName>Reason_for_Change__c</fullName>
        <label>Reason for Change</label>
        <picklist>
            <picklistValues>
                <fullName>Billing Address Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change the Invoice Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Location Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update BU Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Dealer Type (Franchise/Independent)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Nameplates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update New Lot Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Used Lot Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Website URL</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <inlineHelpText>updated by the svoc integration</inlineHelpText>
        <label>Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Age__c</fullName>
        <formula>IF( ISPICKVAL( Request_Status__c , &quot;Submitted&quot;), Today()-  DATEVALUE(CreatedDate),  DATEVALUE(Request_Complete_Date__c) - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Complete_Date__c</fullName>
        <inlineHelpText>updated by the SVOC integration</inlineHelpText>
        <label>Date/Time Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Information__c</fullName>
        <formula>CASE(   Request_Status__c   , 
&quot;Not Submitted&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000021NxP&amp;oid=00D700000008zHZ&amp;lastMod=1414548221000&quot;, &quot;NOT SUBMITTED&quot;), 
&quot;New&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000021NxP&amp;oid=00D700000008zHZ&amp;lastMod=1414548221000&quot;, &quot;NOT SUBMITTED&quot;), 
&quot;Submitted&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000021NxK&amp;oid=00D700000008zHZ&amp;lastMod=1435092304000&quot;, &quot;SUBMITTED&quot; ), 
&quot;Pending&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015Q0000000PhUZ&amp;oid=00DQ000000GJxlb&amp;lastMod=1405621151000&quot;, &quot;PENDING&quot; ),
&quot;Completed - Approved&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000021NxF&amp;oid=00D700000008zHZ&amp;lastMod=1414548178000&quot;, &quot;COMPLETED&quot; ), 
NULL)</formula>
        <inlineHelpText>visual formula field that displays a graphic that represents the processing status of the request</inlineHelpText>
        <label>Request Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Instructions__c</fullName>
        <defaultValue>&quot;Request WILL submit upon Save, unless the submit request checkbox is unchecked&quot;</defaultValue>
        <label>Request Instructions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Reason__c</fullName>
        <label>Request Reason</label>
        <picklist>
            <picklistValues>
                <fullName>New Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valid Duplicate - Customer Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valid Duplicate - Bill the Ad Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valid Duplicate - Change Name of 3rd Party Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valid Duplicate - Additional Billing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valid Duplicate - Needs Value for &quot;Attention To&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update to BU Mapping</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <inlineHelpText>updated by workflow has the request is processed</inlineHelpText>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <color>#FFFF66</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Approved</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Rejected</fullName>
                <color>#CC0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Submitted_Date__c</fullName>
        <inlineHelpText>recorded by the system when the request is submitted to SVOC</inlineHelpText>
        <label>Date/Time Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Update to Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Existing Customer - NO CHANGE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requesting_Department__c</fullName>
        <formula>CreatedBy.Department</formula>
        <label>Requesting Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returned_Billing_City__c</fullName>
        <label>Returned Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returned_Billing_Postal_Code__c</fullName>
        <label>Returned Billing Postal Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returned_Billing_State__c</fullName>
        <label>Returned Billing State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returned_Billing_Street__c</fullName>
        <label>Returned Billing Street</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Returned_Customer_Name__c</fullName>
        <label>Returned Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returned_Legal_Name__c</fullName>
        <label>Returned Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returned_Shipping_City__c</fullName>
        <label>Returned Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returned_Shipping_Postal_Code__c</fullName>
        <label>Returned Shipping Postal Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returned_Shipping_State__c</fullName>
        <label>Returned Shipping State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returned_Shipping_Street__c</fullName>
        <label>Returned Shipping Street</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reviewed_and_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit SVOC Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVOC_ID_Change__c</fullName>
        <formula>Source_Account__r.SVOC_Id__c</formula>
        <label>Source Account SVOC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVOC_ID_Maintain__c</fullName>
        <formula>Customer_Name__r.SVOC_Id__c</formula>
        <label>SVOC ID (Maintain)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVOC_ID__c</fullName>
        <label>SVOC ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <formula>Customer_Name__r.ShippingCity</formula>
        <label>Shipping City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Postal_Code__c</fullName>
        <formula>Customer_Name__r.ShippingPostalCode</formula>
        <label>Shipping Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <formula>Customer_Name__r.ShippingState</formula>
        <label>Shipping State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <formula>Customer_Name__r.ShippingStreet</formula>
        <label>Shipping Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Billing_City__c</fullName>
        <formula>Source_Account__r.BillingCity</formula>
        <label>Source Account Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Billing_Postal_Code__c</fullName>
        <formula>Source_Account__r.BillingPostalCode</formula>
        <label>Source Account Billing Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Billing_State__c</fullName>
        <formula>Source_Account__r.BillingState</formula>
        <label>Source Account Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Billing_Street__c</fullName>
        <formula>Source_Account__r.BillingStreet</formula>
        <label>Source Account Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Dealer_Type__c</fullName>
        <formula>TEXT(Source_Account__r.Dealer_Type__c )</formula>
        <label>Source Account Dealer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Id__c</fullName>
        <description>Account initially assigned to the request</description>
        <label>Source Account Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Invoice_Name__c</fullName>
        <formula>Source_Account__r.Account_Legal_Name__c</formula>
        <inlineHelpText>formula field that reads the source account invoice name (aka Legal Name)</inlineHelpText>
        <label>Source Account Invoice Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Location_Phone__c</fullName>
        <formula>Source_Account__r.Phone</formula>
        <inlineHelpText>formula field that reads the phone number from the source account</inlineHelpText>
        <label>Source Account Location Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_New_Lot_Size__c</fullName>
        <formula>TEXT(Source_Account__r.Lot_Size_New__c)</formula>
        <label>Source Account New Lot Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_SFDC_Id__c</fullName>
        <formula>Source_Account__r.Id</formula>
        <inlineHelpText>formula field that reads the sfdc id associated with the source account</inlineHelpText>
        <label>Source Account SFDC Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_SVOC_Sub_Type__c</fullName>
        <formula>TEXT(Source_Account__r.SVOC_Sub_Type__c)</formula>
        <inlineHelpText>formula field that reads the source account customer sub type</inlineHelpText>
        <label>Source Account SVOC Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_SVOC_Type__c</fullName>
        <formula>TEXT(Source_Account__r.Type)</formula>
        <inlineHelpText>formula field that reads the source account type field</inlineHelpText>
        <label>Source Account SVOC Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Shipping_State__c</fullName>
        <formula>Source_Account__r.ShippingState</formula>
        <label>Source Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Shipping_Street__c</fullName>
        <formula>Source_Account__r.ShippingStreet</formula>
        <label>Source Account Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Used_Lot_Size__c</fullName>
        <formula>TEXT(Source_Account__r.Lot_Size_Used__c)</formula>
        <label>Source Account Used Lot Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Web_Address__c</fullName>
        <formula>Source_Account__r.Website</formula>
        <inlineHelpText>formula field that reads the source account website address</inlineHelpText>
        <label>Source Account Web Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SVOC Requests (Source Account)</relationshipLabel>
        <relationshipName>SVOC_Requests_sourceacc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submit_Request__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>check this box to send your request to the CDG team for processing</inlineHelpText>
        <label>Submit Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urgent_Request__c</fullName>
        <label>Urgent Request</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Address_City__c</fullName>
        <inlineHelpText>enter the address of the dealership displayed on their website</inlineHelpText>
        <label>Web Address City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Address_Info_Same_as_Physical_Addres__c</fullName>
        <label>Web Address Same as Physical?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Address_Phone__c</fullName>
        <inlineHelpText>enter the phone number displayed on the dealer&apos;s website</inlineHelpText>
        <label>Web Address Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Web_Address_State__c</fullName>
        <inlineHelpText>enter the address of the dealership displayed on their website</inlineHelpText>
        <label>Web Address State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manitoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Address_Street_2__c</fullName>
        <inlineHelpText>enter the additional street address info</inlineHelpText>
        <label>Web Address Street 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Address_Street__c</fullName>
        <inlineHelpText>enter the address of the dealership displayed on their website</inlineHelpText>
        <label>Web Address Street 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Address_Zip_Code__c</fullName>
        <label>Web Address Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_URL__c</fullName>
        <inlineHelpText>Enter the web address of the dealer&apos;s website</inlineHelpText>
        <label>Customer&apos;s Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Bill_To_IDs__c</fullName>
        <inlineHelpText>enter the 3rd party bill to svoc ids, seperated by commas</inlineHelpText>
        <label>3rd Party Bill-To IDs</label>
        <type>TextArea</type>
    </fields>
    <label>SVOC Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Source_Account__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Reason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Reviewed_and_Sent__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Danielle Dennis</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Maintains_with_No_Info</fullName>
        <columns>NAME</columns>
        <columns>Request_Submitted_Date__c</columns>
        <columns>Old_Processing_Status__c</columns>
        <columns>SVOC_ID_Change__c</columns>
        <columns>Source_Account__c</columns>
        <columns>New_Customer_Name__c</columns>
        <columns>Returned_Customer_Name__c</columns>
        <columns>Returned_Legal_Name__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Reason__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SVOC_Request__c.Start_Change_Request</value>
        </filters>
        <label>Maintains with No Info</label>
    </listViews>
    <listViews>
        <fullName>Pending_Outgoing</fullName>
        <columns>NAME</columns>
        <columns>Request_Submitted_Date__c</columns>
        <columns>Old_Processing_Status__c</columns>
        <columns>Source_Account__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Reason__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SVOC_Request__c.Create,SVOC_Request__c.Start_Change_Request</value>
        </filters>
        <filters>
            <field>Old_Processing_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Not Submitted,Canceled</value>
        </filters>
        <label>Pending Outgoing</label>
    </listViews>
    <listViews>
        <fullName>Pending_Requests</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Request_Status__c</columns>
        <columns>Source_Account__c</columns>
        <columns>New_Customer_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed - Approved</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>10/27/2014 12:00 AM</value>
        </filters>
        <label>!Pending Requests</label>
    </listViews>
    <listViews>
        <fullName>Returned_To_Do</fullName>
        <columns>NAME</columns>
        <columns>Old_Processing_Status__c</columns>
        <columns>Source_Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Original_SVOC_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SVOC_Request__c.Create_Returned,SVOC_Request__c.Maintain_Returned</value>
        </filters>
        <filters>
            <field>Old_Processing_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Returned To-Do</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>SVOC Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SVOC Requests</pluralLabel>
    <recordTypes>
        <fullName>Change_Completed</fullName>
        <active>true</active>
        <description>Change Request has been completed by SVOC</description>
        <label>Change Completed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Change_Request</fullName>
        <active>true</active>
        <description>form presented to user to add new information</description>
        <label>Change Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Change_Submitted</fullName>
        <active>true</active>
        <description>page layout that has all fields locked while svoc is processing request</description>
        <label>Change Submitted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Create</fullName>
        <active>true</active>
        <description>used to create New Dealer Request Setup from SVOC</description>
        <label>Create</label>
    </recordTypes>
    <recordTypes>
        <fullName>Create_Request_Completed</fullName>
        <active>true</active>
        <description>locks the page from being edited</description>
        <label>Create Request Completed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Create_Returned</fullName>
        <active>true</active>
        <label>Obsolete Create Returned</label>
    </recordTypes>
    <recordTypes>
        <fullName>Create_Submitted</fullName>
        <active>true</active>
        <description>updates the page layout with the fields locked from editing during the processing of the request</description>
        <label>Create Submitted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Maintain</fullName>
        <active>true</active>
        <label>Obsolete_Maintain</label>
    </recordTypes>
    <recordTypes>
        <fullName>Maintain_Returned</fullName>
        <active>true</active>
        <label>Obsolete Maintain Returned</label>
    </recordTypes>
    <recordTypes>
        <fullName>Start_Change_Request</fullName>
        <active>true</active>
        <description>for used to start a change request</description>
        <label>Change Request Start</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unverified_Prospect</fullName>
        <active>true</active>
        <description>used to submit an unverified prospect</description>
        <label>Unverified Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unverified_Submitted</fullName>
        <active>true</active>
        <description>page layout that has all fields locked while svoc is processing request</description>
        <label>Unverified Submitted</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Billing_Address_Change</fullName>
        <active>true</active>
        <description>enforce entry of all billing fields if user selects Change Type = Billing Address Change</description>
        <errorConditionFormula>AND(
   RecordType.DeveloperName = &quot;Change_Request&quot;,
   ISPICKVAL( Reason_for_Change__c , &quot;Billing Address Change&quot;),
   ISBLANK( New_Billing_Street_1__c ),
   ISBLANK( New_Billing_City__c ),
   ISBLANK( New_Billing_Postal_Code__c ) 
)</errorConditionFormula>
        <errorMessage>you must enter the new billing address info</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Address_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 RecordType.DeveloperName = &quot;Unverified_Prospect&quot;,
ISPICKVAL( Billing_Address_Same_as_Physical__c,&quot;No&quot;)
, ISBLANK( Source_Account_Billing_Street__c )
)</errorConditionFormula>
        <errorMessage>the billing address information is required is you answered No to the question &quot;Is Billing Address same as physical location?&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Address_Required_New_Dealer</fullName>
        <active>true</active>
        <description>enforces user to enter billing address for new dealer setup request if the answer to questions is NO</description>
        <errorConditionFormula>AND(
 RecordType.DeveloperName = &quot;Create&quot;,
ISPICKVAL( Billing_Address_Same_as_Physical__c,&quot;No&quot;), 
ISBLANK(New_Billing_Street_1__c)
)</errorConditionFormula>
        <errorMessage>the billing address information is required is you answered No to the question &quot;Is Billing Address same as physical location?&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_Invoice_Name</fullName>
        <active>true</active>
        <description>enforce entry of all billing fields if user selects Change Type = Change the Invoice Name</description>
        <errorConditionFormula>AND
(
 ISPICKVAL( Reason_for_Change__c , &quot;Change the Invoice Name&quot;),
 RecordType.DeveloperName = &quot;Change_Request&quot;,
 ISBLANK(New_Legal_Name__c)
)</errorConditionFormula>
        <errorMessage>You must enter the new Invoice Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_in_Ownership_Is_No</fullName>
        <active>true</active>
        <description>prevent user from looking up previous account if the user answers No to the question</description>
        <errorConditionFormula>AND
( ISPICKVAL(Is_Request_due_to_Ownership_Change__c, &quot;No&quot;),
!ISBLANK( Previous_Account__r.Name ) 
)</errorConditionFormula>
        <errorMessage>It is unnecessary to enter the Previous Account if you answered No to the question &quot;Is request due to ownership change</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_in_ownership</fullName>
        <active>true</active>
        <description>if user selects Change in Ownership, prompt them to use the new dealer request form</description>
        <errorConditionFormula>AND(
   ISPICKVAL( Reason_for_Change__c , &quot;Change in Ownership&quot;),
   RecordType.DeveloperName = &quot;Change_Request&quot;)</errorConditionFormula>
        <errorMessage>you cannot use the change form for a change in ownership, please use the &quot;Request New Dealer Setup&quot; link in the sidebar</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Data_Quality_Score_not_equal_to_100</fullName>
        <active>false</active>
        <description>you cannot submit to svoc unless all required information completed</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;Unverified_Prospect&quot;,
Account_Data_Quality_Score__c &lt; 100
)</errorConditionFormula>
        <errorMessage>You cannot submit this to SVOC until all required fields are completed.  Please cancel this submit and complete the necessary fields on the account, then submit to SVOC.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dealer_Group_equals_No_and_lookup</fullName>
        <active>true</active>
        <description>inform user Dealer Group lookup unnecessary if answer NO for &quot;part of Dealer Group&quot;</description>
        <errorConditionFormula>AND
( ISPICKVAL( Dealer_is_part_of_Dealer_Group__c , &quot;No&quot;),
!ISBLANK(  Dealer_Group_Account__r.Name  ) 
)</errorConditionFormula>
        <errorMessage>it is unnecessary to enter the Dealer Group Account if you answered No to the question &quot;Is Dealer part of a Dealer Group&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dealer_Group_equals_Yes</fullName>
        <active>true</active>
        <description>if the new dealer is part of a dealer group, the user must lookup the dealer group account</description>
        <errorConditionFormula>AND(ISPICKVAL( Dealer_is_part_of_Dealer_Group__c , &quot;Yes&quot;), ISBLANK( Dealer_Group_Account__r.Name ))</errorConditionFormula>
        <errorMessage>you must look up the Dealer Group Account if you answered Yes that the new dealer setup you are requesting is part of a dealer group</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dealer_Type_Equals_Franchise</fullName>
        <active>true</active>
        <description>the new lot size is required if the dealer type = Franchise</description>
        <errorConditionFormula>AND(ISPICKVAL( Dealer_Type__c , &quot;Franchise&quot;), (ISPICKVAL( Lot_Size_New__c , &quot;&quot; )))</errorConditionFormula>
        <errorMessage>If the dealer is a Franchise, please select the picklist value that represents the dealers new car lot size</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dealer_Type_Equals_Independant</fullName>
        <active>true</active>
        <description>the used lot size is required if the dealer type = Independent</description>
        <errorConditionFormula>AND(ISPICKVAL( Dealer_Type__c , &quot;Independent&quot;), (ISPICKVAL( Lot_Size_Used__c , &quot;&quot; )))</errorConditionFormula>
        <errorMessage>If the dealer is a Independent, please select the picklist value that represents the dealer&apos;s used car lot size.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_Change</fullName>
        <active>true</active>
        <description>enforce entry of all billing fields if user selects Change Type = Name Change</description>
        <errorConditionFormula>AND
(
 RecordType.DeveloperName = &quot;Change_Request&quot; ,
ISPICKVAL( Reason_for_Change__c , &quot;Name Change&quot;),
 ISBLANK( New_Customer_Name__c )
)</errorConditionFormula>
        <errorMessage>you must enter the new customer name</errorMessage>
    </validationRules>
</CustomObject>